--- a/apps/frontend/src/pages/lobby/LobbyPage.module.scss
+++ b/apps/frontend/src/pages/lobby/LobbyPage.module.scss
@@ -125,10 +125,10 @@
 
   &__content {
     @include card;
-    min-width: 400px;
-    max-width: 90%;
-    max-height: 90vh;
+    width: 70%;
+    max-height: 50vh;
     overflow-y: auto;
+    border-radius: $border-radius-lg;
   }
 
   &__title {
@@ -157,6 +157,7 @@
     border-radius: $border-radius-md;
     font-weight: bold;
     transition: background $transition-base;
+    white-space: pre-line;
   }
 
   &__cancel {
@@ -201,7 +202,7 @@
     background: $color-gray-dark;
     color: $color-white;
     padding: $spacing-sm;
-    border-radius: $border-radius-sm;
+    border-radius: $border-radius-md;
     border: 1px solid $color-gray-medium;
     transition: border-color $transition-base;
 
