--- a/apps/frontend/src/app/styles/app.scss
+++ b/apps/frontend/src/app/styles/app.scss
@@ -32,6 +32,10 @@ button {
   cursor: pointer;
   touch-action: manipulation;
   -webkit-tap-highlight-color: transparent;
+
+  &:disabled {
+    cursor: not-allowed;
+  }
 }
 
 input,
